# musing

./: Cargo.toml  DOCS.md  LICENSE  README.md  client.py  out.err
src/: audio.rs  config.rs  constants.rs  database.rs  error.rs  main.rs  model.rs  parsers.rs  player.rs  server.rs  server.rs.bak  state.rs  utils.rs
src/.parsers/: filter.rs.bak
src/model/: comparator.rs  decoder.rs  device.rs  filter.rs  playlist.rs  queue.rs  request.rs  resampler.rs  response.rs  song.rs  tag.rs  tag_key.rs
src/parsers/: filter.rs  request.rs
