[package]
name = "rustmpd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
cpal = "0.16.0"
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
erased-serde = "0.4.6"
lazy_static = "1.5.0"
log = "0.4.27"
rand = "0.9.2"
regex = "1.11.1"
serde_json = { version = "1.0.142", features = ["std"] }
simple-logging = "2.0.2"
symphonia = { version = "0.5.4", features = ["all-codecs"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
