[package]
name = "musing"
version = "1.0.0"
edition = "2024"
description = "An MPD-inspired music server"
keywords = ["music", "player", "server"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alfazet/musing"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bincode = "2.0.1"
clap = { version = "4.5.40", features = ["derive"] }
cpal = { version = "0.16.0", features = ["jack"] }
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
dunce = "1.0.5"
erased-serde = "0.4.6"
jwalk = "0.8.1"
lazy_static = "1.5.0"
log = "0.4.27"
rayon = "1.10.0"
regex = "1.11.1"
rubato = "0.16.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["std"] }
simple-logging = "2.0.2"
symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
tokio = { version = "1.46.1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
toml = "0.9.5"
unidecode = "0.3.0"

[profile.release]
lto = true
panic = "abort"
strip = true
